style.css
@font-face {
	font-family: 'Roboto';
	src: url(./fonts/Roboto/Roboto-Regular.ttf);
	font-display: swap;
}

@font-face {
	font-family: 'Roboto Bold';
	src: url(./fonts/Roboto/Roboto-Bold.ttf);
	font-display: swap;
}

body {
	margin: 0;
}

.content {
	display: flex;
	height: 100%;
	min-height: 100%;
}

main {
	display: flex;
	flex-direction: column;
	flex: 1;
	max-width: 100%;
}

.main-content {
	flex: 1;
	width: 1510px;
	margin: 0 auto;
	max-width: 100%;
}

.logo {
	text-align: center;
	margin-bottom: 4px;
}

summary {
	background: #efefef;
	text-align: center;
	margin-bottom: 40px;
	max-width: 100%;
	padding: 38px 0;
}

.summary-title {
	color: #000;
	font-family: 'Roboto Bold';
	font-size: 1.125em;
	font-style: normal;
	line-height: normal;
}

.summary-desc {
	color: #000;
	font-family: Roboto;
	font-size: 1em;
	font-weight: 400;
	width: 972px;
	max-width: 90%;
	margin: 0 auto;
}

.news {
	display: flex;
	padding: 0 12px 12px 12px;
}

.news article:not(:last-child) {
	margin-right: 50px;
}

.news .news-title {
	color: #000;
	font-family: 'Roboto Bold';
	font-size: 1.5em;
	font-style: normal;
	line-height: normal;
	margin: 0 0 18px 0;
}

.news figure {
	margin: 0;
	display: inline-block;
}

.news figure img {
	float: left;
	margin-right: 1em;
}

.news figure figcaption {
	color: #000;
	font-family: Roboto;
	font-size: 1em;
	font-style: normal;
	font-weight: 400;
	line-height: normal;
}

footer {
	text-align: center;
	border-top: 1px #dedede solid;
	height: 79px;
	color: #3e3e3e;
	font-family: Roboto;
	font-size: 1em;
	font-weight: 400;
}

footer p {
	line-height: 3em;
}

.nav-desktop {
	width: 150px;
	background: #191718;
	display: block;
	height: 100vh;
	top: 0;
	position: sticky;
}

.nav-wrapper {
	padding: 0;
	margin: 0;
}

.nav-item {
	height: 44px;
	border-bottom: 1px #aaa solid;
	width: 150px;
	cursor: pointer;
}

.nav-item.active a {
	color: #fff;
}

.nav-item:hover {
	background-color: #5c5c5c;
}

.nav-item a {
	color: #aaa;
	text-decoration: unset;
	line-height: 2.8em;
	padding-left: 1em;
	font-family: 'Roboto Bold';
	font-size: 1em;
}

.nav-item:hover a {
	color: #ffffff;
}

.nav-mobile {
	display: none;
	background-color: #fff;
	height: 65px;
	position: sticky;
	top: 0;
	left: 0;
	box-shadow: 0 0 10px 0 #191718;
}

#mobile-menu-toggle {
	display: flex;
	flex-direction: column;
	position: relative;
	top: 24px;
	left: 20px;
	z-index: 1;
	-webkit-user-select: none;
	user-select: none;
	width: 29px;
}

#mobile-menu-toggle input {
	display: flex;
	width: 29px;
	height: 16px;
	position: absolute;
	cursor: pointer;
	opacity: 0;
	z-index: 2;
}

#mobile-menu-toggle span {
	display: flex;
	width: 29px;
	height: 2px;
	margin-bottom: 5px;
	position: relative;
	background: #191718;
	border-radius: 3px;
	z-index: 1;
	transform-origin: 5px 0px;
	transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
		background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
}

#mobile-menu-toggle span:first-child {
	transform-origin: 0% 0%;
}

#mobile-menu-toggle span:nth-last-child(2) {
	transform-origin: 0% 100%;
}

#mobile-menu-toggle input:checked ~ span {
	opacity: 1;
	transform: rotate(45deg) translate(-3px, -1px);
	background: #fff;
}
#mobile-menu-toggle input:checked ~ span:nth-last-child(3) {
	opacity: 0;
	transform: rotate(0deg) scale(0.2, 0.2);
}

#mobile-menu-toggle input:checked ~ span:nth-last-child(2) {
	transform: rotate(-45deg) translate(0, -1px);
}

#mobile-menu-toggle input:checked ~ ul {
	transform: none;
}

#mobile-menu-toggle input:checked ~ .nav-wrapper {
	visibility: visible;
	height: 100vh;
}

#mobile-menu-toggle input:checked ~ .nav-wrapper .nav-mobile-item {
	visibility: visible;
}

.nav-mobile .nav-wrapper {
	visibility: hidden;
	position: absolute;
	height: 0;
	list-style-type: none;
	width: 180px;
	box-shadow: 0 0 10px #191718;
	margin: -50px 0 0 -50px;
	padding: 96px 0px 0 30px;
	background-color: #191718;
	-webkit-font-smoothing: antialiased;
	transform-origin: 0% 0%;
	transform: translate(-100%, 0);
	transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
}

.nav-mobile-item {
	width: 100%;
	transition-delay: 0.5s;
	visibility: hidden;
}

.nav-mobile-item a {
	text-decoration: none;
	opacity: 1;
	font-family: 'Roboto Bold';
	font-size: 1em;
	transition: 200ms;
}

@media only screen and (max-width: 768px) {
	.content {
		display: unset;
	}

	.nav-desktop {
		display: none;
	}

	.nav-mobile {
		display: block;
	}

	.news {
		flex-wrap: wrap;
	}

	.news article:not(:last-child) {
		margin-right: 0;
		margin-bottom: 1.5em;
	}

	.summary-title {
		font-size: 1.125em;
	}
}

